--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 	<meta name="format-detection" content="telephone=no,email=no,adress=no">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
   <link rel="preload" href="./static/valentin-loop.mp3" as="media">
-  <link rel="preload" href="./static/lovely-pop-loop.mp3" as="media">
-  <link rel="preload" href="./static/sprite-saic.png" as="image">
-  <link rel="preload" href="./static/sprite-saic.css" as="style">
+  <!--<link rel="preload" href="./static/lovely-pop-loop.mp3" as="media">-->
   <link rel="preload" href="./static/swiper.js" as="script">
   <link rel="preload" href="./static/car-big.png" as="image">
   <link rel="preload" href="./static/wheel-big.png" as="image">
