修复UI布局，preload部分图片

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <link rel="preload" href="./static/swiper.js" as="script">
   <link rel="preload" href="./static/car-big.png" as="image">
   <link rel="preload" href="./static/wheel-big.png" as="image">
+  <link rel="preload" href="./static/buildings2.png" as="image">
+  <link rel="preload" href="./static/earth.png" as="image">
+  <link rel="preload" href="./static/home-bgs.png" as="image">
+  <link rel="preload" href="./static/home-title.png" as="image">
+  <link rel="preload" href="./static/home-slogan.png" as="image">
+  <link rel="preload" href="./static/future-longbg.jpg" as="image">
 	<title>SAIC International</title>
 </head>
 
