add animation, fix logic

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
   <link rel="preload" href="./static/slogan-title.png" as="image">
   <link rel="preload" href="./static/slogan-tip.png" as="image">
   <link rel="preload" href="./static/share-txt.png" as="image">
-  <link rel="preload" href="./static/logo.png" as="image">
   <link rel="preload" href="./static/email-title.png" as="image">
-  <link rel="preload" href="./static/icon-letter.png" as="image">
   <link rel="preload" href="./static/wechat-gradient.png" as="image">
   <link rel="preload" href="./static/wechat-title1.png" as="image">
   <link rel="preload" href="./static/wechat-bgboard.png" as="image">
@@ -102,6 +100,10 @@
   <link rel="preload" href="./static/pic-5.png" as="image">
   <link rel="preload" href="./static/avatar-6.png" as="image">
   <link rel="preload" href="./static/pic-6.png" as="image">
+  <link rel="preload" href="./static/sprite-saic.png" as="image">
+  <link rel="preload" href="./static/letter-bottom.png" as="image">
+  <link rel="preload" href="./static/letter-top.png" as="image">
+  <link rel="preload" href="./static/letter-inner.png" as="image">
 	<title>SAIC International</title>
 </head>
 
