fix preload img

--- a/index.html
+++ b/index.html
@@ -10,104 +10,106 @@
   <link rel="preload" href="./static/valentin-loop.mp3" as="media">
   <!--<link rel="preload" href="./static/lovely-pop-loop.mp3" as="media">-->
   <link rel="preload" href="./static/swiper.js" as="script">
-  <link rel="preload" href="./static/car-big.png" as="image">
-  <link rel="preload" href="./static/wheel-big.png" as="image">
-  <link rel="preload" href="./static/buildings2.png" as="image">
-  <link rel="preload" href="./static/earth.png" as="image">
-  <link rel="preload" href="./static/home-bgs.png" as="image">
-  <link rel="preload" href="./static/home-title.png" as="image">
-  <link rel="preload" href="./static/home-slogan.png" as="image">
-  <link rel="preload" href="./static/future-longbg.jpg" as="image">
-  <link rel="preload" href="./static/report-cloud.png" as="image">
-  <link rel="preload" href="./static/report-year.png" as="image">
-  <link rel="preload" href="./static/report-title.png" as="image">
-  <link rel="preload" href="./static/report-polygon.png" as="image">
-  <link rel="preload" href="./static/report1-title.png" as="image">
-  <link rel="preload" href="./static/report1-content.png" as="image">
-  <link rel="preload" href="./static/report2-title.png" as="image">
-  <link rel="preload" href="./static/report2-content.png" as="image">
-  <link rel="preload" href="./static/report3-title.png" as="image">
-  <link rel="preload" href="./static/report3-content.png" as="image">
-  <link rel="preload" href="./static/report4-title.png" as="image">
-  <link rel="preload" href="./static/report4-content.png" as="image">
-  <link rel="preload" href="./static/wechat-require.png" as="image">
-  <link rel="preload" href="./static/wechat-bgboard.png" as="image">
-  <link rel="preload" href="./static/wechat-man1.png" as="image">
-  <link rel="preload" href="./static/logo.png" as="image">
-  <link rel="preload" href="./static/name.png" as="image">
-  <link rel="preload" href="./static/slogan-title.png" as="image">
-  <link rel="preload" href="./static/slogan-tip.png" as="image">
-  <link rel="preload" href="./static/share-txt.png" as="image">
-  <link rel="preload" href="./static/email-title.png" as="image">
-  <link rel="preload" href="./static/wechat-gradient.png" as="image">
-  <link rel="preload" href="./static/wechat-title1.png" as="image">
-  <link rel="preload" href="./static/wechat-bgboard.png" as="image">
-  <link rel="preload" href="./static/major-icon1.png" as="image">
-  <link rel="preload" href="./static/wechat-major1.png" as="image">
-  <link rel="preload" href="./static/major-icon2.png" as="image">
-  <link rel="preload" href="./static/wechat-major2.png" as="image">
-  <link rel="preload" href="./static/major-icon3.png" as="image">
-  <link rel="preload" href="./static/wechat-major3.png" as="image">
-  <link rel="preload" href="./static/major-icon4.png" as="image">
-  <link rel="preload" href="./static/wechat-major4.png" as="image">
-  <link rel="preload" href="./static/wechat-man2.png" as="image">
-  <link rel="preload" href="./static/wechat-bgpolygan.png" as="image">
-  <link rel="preload" href="./static/wechat-provide1.png" as="image">
-  <link rel="preload" href="./static/wechat-right.png" as="image">
-  <link rel="preload" href="./static/wechat-provide2.png" as="image">
-  <link rel="preload" href="./static/wechat-bottom2.png" as="image">
-  <link rel="preload" href="./static/wechat-bgpolygan2.png" as="image">
-  <link rel="preload" href="./static/wechat-provide4.png" as="image">
-  <link rel="preload" href="./static/wechat-provide3.png" as="image">
-  <link rel="preload" href="./static/future-car.png" as="image">
-  <link rel="preload" href="./static/future-carwing.png" as="image">
-  <link rel="preload" href="./static/future-cartail.png" as="image">
-  <link rel="preload" href="./static/future-cloud.png" as="image">
-  <link rel="preload" href="./static/future-topbuilding.png" as="image">
-  <link rel="preload" href="./static/future-longbg.jpg" as="image">
-  <link rel="preload" href="./static/bg-cloud-1.png" as="image">
-  <link rel="preload" href="./static/banner1.png" as="image">
-  <link rel="preload" href="./static/banner2.png" as="image">
-  <link rel="preload" href="./static/banner3.png" as="image">
-  <link rel="preload" href="./static/banner4.png" as="image">
-  <link rel="preload" href="./static/banner5.png" as="image">
-  <link rel="preload" href="./static/banner6.png" as="image">
-  <link rel="preload" href="./static/future-major.png" as="image">
-  <link rel="preload" href="./static/future-major1.png" as="image">
-  <link rel="preload" href="./static/future-major2.png" as="image">
-  <link rel="preload" href="./static/future-major3.png" as="image">
-  <link rel="preload" href="./static/future-major4.png" as="image">
-  <link rel="preload" href="./static/future-topbg.png" as="image">
-  <link rel="preload" href="./static/future-polygan2.png" as="image">
-  <link rel="preload" href="./static/future-polygan3.png" as="image">
-  <link rel="preload" href="./static/future-polygan4.png" as="image">
-  <link rel="preload" href="./static/future-polygan5.png" as="image">
-  <link rel="preload" href="./static/future-polygan7.png" as="image">
-  <link rel="preload" href="./static/years-2021.png" as="image">
-  <link rel="preload" href="./static/years-2020.png" as="image">
-  <link rel="preload" href="./static/years-2019.png" as="image">
-  <link rel="preload" href="./static/wechat-top.png" as="image">
-  <link rel="preload" href="./static/avatar-user.png" as="image">
-  <link rel="preload" href="./static/avatar-1.png" as="image">
-  <link rel="preload" href="./static/pic-1.png" as="image">
-  <link rel="preload" href="./static/avatar-2.png" as="image">
-  <link rel="preload" href="./static/pic-2.png" as="image">
-  <link rel="preload" href="./static/avatar-3.png" as="image">
-  <link rel="preload" href="./static/pic-3.png" as="image">
-  <link rel="preload" href="./static/avatar-4.png" as="image">
-  <link rel="preload" href="./static/pic-4.png" as="image">
-  <link rel="preload" href="./static/avatar-5.png" as="image">
-  <link rel="preload" href="./static/pic-5.png" as="image">
-  <link rel="preload" href="./static/avatar-6.png" as="image">
-  <link rel="preload" href="./static/pic-6.png" as="image">
-  <link rel="preload" href="./static/sprite-saic.png" as="image">
-  <link rel="preload" href="./static/letter-bottom.png" as="image">
-  <link rel="preload" href="./static/letter-top.png" as="image">
-  <link rel="preload" href="./static/letter-inner.png" as="image">
 	<title>SAIC International</title>
 </head>
 
 <body>
+  <div style="display: none">
+    <img src="./static/car-big.png">
+    <img src="./static/wheel-big.png">
+    <img src="./static/buildings2.png">
+    <img src="./static/earth.png">
+    <img src="./static/home-bgs.png">
+    <img src="./static/home-title.png">
+    <img src="./static/home-slogan.png">
+    <img src="./static/future-longbg.jpg">
+    <img src="./static/report-cloud.png">
+    <img src="./static/report-year.png">
+    <img src="./static/report-title.png">
+    <img src="./static/report-polygon.png">
+    <img src="./static/report1-title.png">
+    <img src="./static/report1-content.png">
+    <img src="./static/report2-title.png">
+    <img src="./static/report2-content.png">
+    <img src="./static/report3-title.png">
+    <img src="./static/report3-content.png">
+    <img src="./static/report4-title.png">
+    <img src="./static/report4-content.png">
+    <img src="./static/wechat-require.png">
+    <img src="./static/wechat-bgboard.png">
+    <img src="./static/wechat-man1.png">
+    <img src="./static/logo.png">
+    <img src="./static/name.png">
+    <img src="./static/slogan-title.png">
+    <img src="./static/slogan-tip.png">
+    <img src="./static/share-txt.png">
+    <img src="./static/email-title.png">
+    <img src="./static/wechat-gradient.png">
+    <img src="./static/wechat-title1.png">
+    <img src="./static/wechat-bgboard.png">
+    <img src="./static/major-icon1.png">
+    <img src="./static/wechat-major1.png">
+    <img src="./static/major-icon2.png">
+    <img src="./static/wechat-major2.png">
+    <img src="./static/major-icon3.png">
+    <img src="./static/wechat-major3.png">
+    <img src="./static/major-icon4.png">
+    <img src="./static/wechat-major4.png">
+    <img src="./static/wechat-man2.png">
+    <img src="./static/wechat-bgpolygan.png">
+    <img src="./static/wechat-provide1.png">
+    <img src="./static/wechat-right.png">
+    <img src="./static/wechat-provide2.png">
+    <img src="./static/wechat-bottom2.png">
+    <img src="./static/wechat-bgpolygan2.png">
+    <img src="./static/wechat-provide4.png">
+    <img src="./static/wechat-provide3.png">
+    <img src="./static/future-car.png">
+    <img src="./static/future-carwing.png">
+    <img src="./static/future-cartail.png">
+    <img src="./static/future-cloud.png">
+    <img src="./static/future-topbuilding.png">
+    <img src="./static/future-longbg.jpg">
+    <img src="./static/bg-cloud-1.png">
+    <img src="./static/banner1.png">
+    <img src="./static/banner2.png">
+    <img src="./static/banner3.png">
+    <img src="./static/banner4.png">
+    <img src="./static/banner5.png">
+    <img src="./static/banner6.png">
+    <img src="./static/future-major.png">
+    <img src="./static/future-major1.png">
+    <img src="./static/future-major2.png">
+    <img src="./static/future-major3.png">
+    <img src="./static/future-major4.png">
+    <img src="./static/future-topbg.png">
+    <img src="./static/future-polygan2.png">
+    <img src="./static/future-polygan3.png">
+    <img src="./static/future-polygan4.png">
+    <img src="./static/future-polygan5.png">
+    <img src="./static/future-polygan7.png">
+    <img src="./static/years-2021.png">
+    <img src="./static/years-2020.png">
+    <img src="./static/years-2019.png">
+    <img src="./static/wechat-top.png">
+    <img src="./static/avatar-user.png">
+    <img src="./static/avatar-1.png">
+    <img src="./static/pic-1.png">
+    <img src="./static/avatar-2.png">
+    <img src="./static/pic-2.png">
+    <img src="./static/avatar-3.png">
+    <img src="./static/pic-3.png">
+    <img src="./static/avatar-4.png">
+    <img src="./static/pic-4.png">
+    <img src="./static/avatar-5.png">
+    <img src="./static/pic-5.png">
+    <img src="./static/avatar-6.png">
+    <img src="./static/pic-6.png">
+    <img src="./static/sprite-saic.png">
+    <img src="./static/letter-bottom.png">
+    <img src="./static/letter-top.png">
+    <img src="./static/letter-inner.png">
+  </div>
 	<div id="app">
 		<div class="default-loading">
 			<div class="floater"></div>
