--- a/index.html
+++ b/index.html
@@ -109,6 +109,22 @@
     <img src="./static/letter-bottom.png">
     <img src="./static/letter-top.png">
     <img src="./static/letter-inner.png">
+    <img src="./static/home-bike.png">
+    <img src="./static/home-bottom.png">
+    <img src="./static/home-buildings.png">
+    <img src="./static/home-car.png">
+    <img src="./static/home-cloud.png">
+    <img src="./static/home-logo.png">
+    <img src="./static/home-text1.png">
+    <img src="./static/home-text2.png">
+    <img src="./static/home-text3.png">
+    <img src="./static/home-text4.png">
+    <img src="./static/home-windmill-leaves.png">
+    <img src="./static/home-windmill-range.png">
+    <img src="./static/home-windmill1.png">
+    <img src="./static/provide-building.png">
+    <img src="./static/provide-car.png">
+    <img src="./static/provide.png">
   </div>
 	<div id="app">
 		<div class="default-loading">
